adapted to java version 1.6, added more tests
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/pcc@4790 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/proofCarryingCode-sbe.properties
+++ b/config/proofCarryingCode-sbe.properties
@@ -1,6 +1,3 @@
-# only paths to possible error locations are analyzed, may be used
-# cfa.removeIrrelevantForErrorLocations = true
-
 # set up configuration for ART construction 
 
 analysis.useRefinement = true
@@ -27,6 +24,10 @@ cpa.predicate.blk.threshold = 1
 #cpa.predicate.blk.alwaysAtFunctions = false
 #cpa.predicat.blk.alwaysAtLoops = false
 
+# CFA configuration
+# only paths to possible error locations are analyzed, may be used
+# cfa.removeIrrelevantForErrorLocations = true
+
 # PCC configuration
 
 # enable proof generation/checking
@@ -37,3 +38,8 @@ pcc.proofgen.doPCC = true
 # allowed values are SBEWithoutIndicesAsART (default), SBEWithIndicesAsART,
 #  SBEWithIndicesAsInvariant,   SBEWithoutIndicesAsInvariant
 pcc.proofgen.algorithm = SBEWithoutIndicesAsART
+
+#specifies the file to which proof is written/from which the proof is read from
+# default pccProof.txt
+#pcc.proofgen.file = "pccProof.txt"
+
