Set the parser.ignoreCasts option for all predicate analysis configs.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4793 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/predicateAnalysis-lbe.properties
+++ b/config/predicateAnalysis-lbe.properties
@@ -25,3 +25,6 @@ specification = config/specification/ErrorLocation.spc
 
 cpa.predicate.blk.alwaysAtFunctions = true
 cpa.predicate.blk.alwaysAtLoops     = true
+
+# casts are ignored by PredicateCPA anyway, thus we can remove all of them and work around a CIL bug
+parser.ignoreCasts = true
