--- a/config/predicateAnalysis-sbe.properties
+++ b/config/predicateAnalysis-sbe.properties
@@ -24,3 +24,6 @@ specification = config/specification/ErrorLocation.spc
 
 cpa.predicate.abstraction.cartesian = true
 cpa.predicate.blk.threshold = 1
+
+# casts are ignored by PredicateCPA anyway, thus we can remove all of them and work around a CIL bug
+parser.ignoreCasts = true
