--- a/config/predicateAnalysis-abm-auxiliaryPredicates.properties
+++ b/config/predicateAnalysis-abm-auxiliaryPredicates.properties
@@ -25,3 +25,6 @@ cpa.predicate.blk.alwaysAtFunctions = false
 cpa.predicate.blk.alwaysAtLoops     = true
 
 cpa.predicate.abm.auxiliaryPredicateComputer = true
+
+# casts are ignored by PredicateCPA anyway, thus we can remove all of them and work around a CIL bug
+parser.ignoreCasts = true
