--- a/config/predicateAnalysis-abm.properties
+++ b/config/predicateAnalysis-abm.properties
@@ -28,3 +28,6 @@ cpa.predicate.blk.alwaysAtFunctions = false
 cpa.predicate.blk.alwaysAtLoops     = true
 
 cpa.predicate.abm.auxiliaryPredicateComputer = false
+
+# casts are ignored by PredicateCPA anyway, thus we can remove all of them and work around a CIL bug
+parser.ignoreCasts = true
