--- a/config/predicateAnalysis-lbe-cbmc.properties
+++ b/config/predicateAnalysis-lbe-cbmc.properties
@@ -30,3 +30,5 @@ cpa.predicate.blk.alwaysAtLoops     = true
 analysis.useCBMC = true
 counterexample.continueAfterInfeasibleError = true
 
+# casts are ignored by PredicateCPA anyway, thus we can remove all of them and work around a CIL bug
+parser.ignoreCasts = true
