--- a/config/predicateAnalysis.properties
+++ b/config/predicateAnalysis.properties
@@ -31,4 +31,5 @@ specification = config/specification/ErrorLocation.spc
 cpa.predicate.blk.alwaysAtFunctions = false
 cpa.predicate.blk.alwaysAtLoops     = true
 
+# casts are ignored by PredicateCPA anyway, thus we can remove all of them and work around a CIL bug
 parser.ignoreCasts = true
