Enable FunctionPointerCPA in the most-used config files.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4796 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/explicitAnalysis-featureVars.properties
+++ b/config/explicitAnalysis-featureVars.properties
@@ -6,7 +6,9 @@
 # ------------------------------------------------------------------
 cfa.removeIrrelevantForErrorLocations = true
 
+# ARTCPA is needed for counterexample analysis
 cpa = cpa.art.ARTCPA
+
 ARTCPA.cpa = cpa.composite.CompositeCPA
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.featurevariables.FeatureVarsCPA, cpa.explicit.ExplicitCPA
