--- a/config/explicitAnalysis-join.properties
+++ b/config/explicitAnalysis-join.properties
@@ -4,11 +4,17 @@
 # ------------------------------------------------------------------
 
 # only paths to possible error locations are analyzed
-cfa.removeIrrelevantForErrorLocations = true
+# This does currently not work if function pointers exist.
+#cfa.removeIrrelevantForErrorLocations = true
 
 # topsort is better than dfs if elements may be merged
 analysis.traversal.order = bfs
 analysis.traversal.useTopsort = true
+
+# FunctionPointerCPA provides handling of function pointers
+ARTCPA.cpa = cpa.functionpointer.FunctionPointerCPA
+
+FunctionPointerCPA.cpa = cpa.composite.CompositeCPA
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.explicit.ExplicitCPA
 
