--- a/config/explicitAnalysis-no-cbmc.properties
+++ b/config/explicitAnalysis-no-cbmc.properties
@@ -4,7 +4,13 @@
 # ------------------------------------------------------------------
 
 # only paths to possible error locations are analyzed
-cfa.removeIrrelevantForErrorLocations = true
+# This does currently not work if function pointers exist.
+#cfa.removeIrrelevantForErrorLocations = true
+
+# FunctionPointerCPA provides handling of function pointers
+ARTCPA.cpa = cpa.functionpointer.FunctionPointerCPA
+
+FunctionPointerCPA.cpa = cpa.composite.CompositeCPA
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.explicit.ExplicitCPA
 
