--- a/config/bmc-induction.properties
+++ b/config/bmc-induction.properties
@@ -33,7 +33,11 @@ analysis.useBMC = true
 
 # ARTCPA is needed for induction
 cpa = cpa.art.ARTCPA
-ARTCPA.cpa = cpa.composite.CompositeCPA
+
+# FunctionPointerCPA provides handling of function pointers
+ARTCPA.cpa = cpa.functionpointer.FunctionPointerCPA
+
+FunctionPointerCPA.cpa = cpa.composite.CompositeCPA
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.loopstack.LoopstackCPA
 
