--- a/config/bmc.properties
+++ b/config/bmc.properties
@@ -11,12 +11,6 @@ cpa.loopstack.maxLoopIterations = 1
 # disable bounding assertions (default is enabled)
 #bmc.boundingAssertions = false
 
-# ARTCPA is needed in order to create an error path for unsafe programs
-# Can be commented out if no error path information is needed.
-cpa = cpa.art.ARTCPA
-ARTCPA.cpa = cpa.composite.CompositeCPA
-
-
 # The rest of the options should not be changed.
 
 # best traversal orer for formula creation
@@ -25,6 +19,14 @@ analysis.traversal.useTopsort = true
 analysis.traversal.useCallstack = true
 
 analysis.useBMC = true
+
+# ARTCPA is needed in order to create an error path for unsafe programs
+cpa = cpa.art.ARTCPA
+
+# FunctionPointerCPA provides handling of function pointers
+ARTCPA.cpa = cpa.functionpointer.FunctionPointerCPA
+
+FunctionPointerCPA.cpa = cpa.composite.CompositeCPA
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.loopstack.LoopstackCPA
 
