--- a/config/explicitAnalysis.properties
+++ b/config/explicitAnalysis.properties
@@ -5,13 +5,20 @@
 # ------------------------------------------------------------------
 
 # only paths to possible error locations are analyzed
-cfa.removeIrrelevantForErrorLocations = true
+# This does currently not work if function pointers exist.
+#cfa.removeIrrelevantForErrorLocations = true
 
 analysis.useCBMC = true
 counterexample.continueAfterInfeasibleError = true
 
+# ARTCPA is needed for counterexample analysis
 cpa = cpa.art.ARTCPA
-ARTCPA.cpa = cpa.composite.CompositeCPA
+
+# FunctionPointerCPA provides handling of function pointers
+ARTCPA.cpa = cpa.functionpointer.FunctionPointerCPA
+
+FunctionPointerCPA.cpa = cpa.composite.CompositeCPA
+
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.explicit.ExplicitCPA
 
 cpa.explicit.threshold = 200000
