--- a/config/predicateAnalysis-lbe-cbmc.properties
+++ b/config/predicateAnalysis-lbe-cbmc.properties
@@ -17,7 +17,10 @@ cegar.refiner = cpa.predicate.PredicateRefiner
 # ARTCPA is necessary for refinement and has to be the top-level CPA
 cpa = cpa.art.ARTCPA
 
-ARTCPA.cpa = cpa.composite.CompositeCPA
+# FunctionPointerCPA provides handling of function pointers
+ARTCPA.cpa = cpa.functionpointer.FunctionPointerCPA
+
+FunctionPointerCPA.cpa = cpa.composite.CompositeCPA
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA
 
