--- a/config/predicateAnalysis-abm.properties
+++ b/config/predicateAnalysis-abm.properties
@@ -11,7 +11,9 @@ cegar.refiner = cpa.predicate.ABMPredicateRefiner
 cpa = cpa.abm.ABMCPA
 ABMCPA.cpa = cpa.art.ARTCPA
 
-ARTCPA.cpa = cpa.composite.CompositeCPA
+ARTCPA.cpa = cpa.functionpointer.FunctionPointerCPA
+
+FunctionPointerCPA.cpa = cpa.composite.CompositeCPA
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.ABMPredicateCPA
 
@@ -19,7 +21,7 @@ cpa.art.export = false
 cpa.art.errorPath.export = false
 
 # this automaton defines which locations are the error locations
-specification = config/specification/ErrrorLocation.spc
+specification = config/specification/ErrorLocation.spc
 
 cpa.abm.blockHeuristic = FunctionAndLoopPartitioning
 cpa.abm.gatherCacheMissStatistics = false
