Update bmc.properties: - enable parser.ignoreCasts - use LIA instead of LRA by default
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4800 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/bmc.properties
+++ b/config/bmc.properties
@@ -5,8 +5,8 @@
 # the loop unrolling bound
 cpa.loopstack.maxLoopIterations = 1
 
-# use integer arithmetic (default is false)
-#cpa.predicate.mathsat.useIntegers = true
+# use integer arithmetic
+cpa.predicate.mathsat.useIntegers = true
 
 # disable bounding assertions (default is enabled)
 #bmc.boundingAssertions = false
@@ -45,3 +45,5 @@ cpa.predicate.targetStateSatCheck = false
 
 # Ignore target states during formula creation
 cpa.automaton.breakOnTargetState = false
+
+parser.ignoreCasts = true
