fix ant clean task
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4814 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.xml
+++ b/build.xml
@@ -28,10 +28,9 @@
 	-->
     </target>
     <target name="clean">
-        <delete dir="bin"/>
-        <delete file="cpachecker.jar"/>
-        <delete file="CPAchecker-*.zip"/>
-        <delete file="CPAchecker-*.tar.*"/>
+	<delete>
+	    <fileset dir="." includes="bin cpachecker.jar CPAchecker-*.zip CPAchecker-*.tar.*"/>
+	</delete>
     </target>
     <target depends="clean" name="cleanall"/>
     <target depends="build-subprojects,build-project,build-documentation" name="build"/>
