--- a/build.xml
+++ b/build.xml
@@ -91,7 +91,7 @@
     <target name="zip" depends="jar">
 	<zip destfile="CPAchecker-windows-${version}.zip" whenempty="fail">
 	    <zipfileset dir="." includes="config/** doc/** scripts/*.bat scripts/*.txt cpachecker.jar *.txt" prefix="CPAchecker-windows-${version}/"/>
-	    <zipfileset dir="." includes="lib/**" excludes="lib/build-only/** lib/native/**" prefix="CPAchecker-windows-${version}/"/>
+	    <zipfileset dir="." includes="lib/**" excludes="lib/build-only/** lib/native/** lib/eclipse/*.source_*" prefix="CPAchecker-windows-${version}/"/>
 	    <zipfileset dir="." includes="lib/native/*win*/**" prefix="CPAchecker-windows-${version}/"/>
 	</zip>
     </target>
@@ -99,7 +99,7 @@
     <target name="tar" depends="jar">
 	<tar destfile="CPAchecker-linux-${version}.tar.bz2" compression="bzip2">
 	    <tarfileset dir="." includes="config/** doc/** scripts/*.* cpachecker.jar *.txt" excludes="scripts/*.bat" prefix="CPAchecker-linux-${version}/"/>
-	    <tarfileset dir="." includes="lib/**" excludes="lib/build-only/** lib/native/source/** lib/native/*win*/**" prefix="CPAchecker-linux-${version}/"/>
+	    <tarfileset dir="." includes="lib/**" excludes="lib/build-only/** lib/native/source/** lib/eclipse/*.source_* lib/native/*win*/**" prefix="CPAchecker-linux-${version}/"/>
 	</tar>
     </target>
 
