--- a/build.xml
+++ b/build.xml
@@ -98,8 +98,21 @@
 
     <target name="tar" depends="jar">
 	<tar destfile="CPAchecker-linux-${version}.tar.bz2" compression="bzip2">
-	    <tarfileset dir="." includes="config/** doc/** scripts/*.* cpachecker.jar *.txt" excludes="scripts/*.bat" prefix="CPAchecker-linux-${version}/"/>
-	    <tarfileset dir="." includes="lib/**" excludes="lib/build-only/** lib/native/source/** lib/eclipse/*.source_* lib/native/*win*/**" prefix="CPAchecker-linux-${version}/"/>
+	    <tarfileset dir="."
+		includes="config/** doc/** cpachecker.jar *.txt"
+		prefix="CPAchecker-linux-${version}/"/>
+	    <tarfileset dir="scripts"
+		includes="*.*"
+		excludes="*.bat *.sh *.py"
+		prefix="CPAchecker-linux-${version}/scripts/"/>
+	    <tarfileset dir="lib"
+		includes="*.* eclipse/*"
+		excludes="eclipse/*.source_*"
+		prefix="CPAchecker-linux-${version}/lib/"/>
+	    <tarfileset dir="." filemode="755"
+		includes="scripts/*.sh scripts/*.py lib/native/**"
+		excludes="lib/native/source/** lib/native/*win*/**"
+		prefix="CPAchecker-linux-${version}/"/>
 	</tar>
     </target>
 
