Changed optimized sv-comp config to reflect the new default value of alias analysis.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4821 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/sv-comp12-abm.properties
+++ b/config/sv-comp12-abm.properties
@@ -34,3 +34,5 @@ parser.ignoreCasts = true
 # Disable all output files except the error path
 output.disable=true
 cpa.art.errorPath.file = ErrorPath.txt
+
+cpa.predicate.handlePointerAliasing = false
