--- a/config/proofCarryingCode-sbe.properties
+++ b/config/proofCarryingCode-sbe.properties
@@ -35,9 +35,9 @@ pcc.proofgen.doPCC = true
 
 # specifies the kind of algorithm which should be used
 # must be the same for generation and checking
-# allowed values are  SBEINDART (default),   SBENOINDART,
+# allowed values are SBENOINDART(default), SBEINDART, 
 #  SBEINDINVARIANT,  SBENOINDINVARIANT
-pcc.proofgen.algorithm = SBEINDART
+pcc.proofgen.algorithm = SBENOINDINVARIANT
 
 #specifies the file to which proof is written/from which the proof is read from
 # default pccProof.txt
