Fix ant clean task (bin/ was not deleted)
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4841 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.xml
+++ b/build.xml
@@ -28,8 +28,8 @@
 	-->
     </target>
     <target name="clean">
-	<delete>
-	    <fileset dir="." includes="bin cpachecker.jar CPAchecker-*.zip CPAchecker-*.tar.*"/>
+	<delete includeEmptyDirs="true">
+	    <fileset dir="." includes="bin/** cpachecker.jar CPAchecker-*.zip CPAchecker-*.tar.*"/>
 	</delete>
     </target>
     <target depends="clean" name="cleanall"/>
