--- a/build.xml
+++ b/build.xml
@@ -41,6 +41,7 @@
 
     <target depends="init" name="build-project">
         <echo message="${ant.project.name}: ${ant.file}"/>
+	<depend srcdir="${source.dir}" destdir="${class.dir}"/>
 	<javac debug="true" debuglevel="${debuglevel}" destdir="${class.dir}" source="${source.format}" target="${class.format}" encoding="UTF-8">
 	    <src path="${source.dir}"/>
             <classpath refid="CPAchecker.classpath"/>
