new SBE algorithm (smaller proof), bug fixes, startet ABE implementation
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/pcc@4853 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/proofCarryingCode-sbe.properties
+++ b/config/proofCarryingCode-sbe.properties
@@ -36,7 +36,7 @@ pcc.proofgen.doPCC = true
 # specifies the kind of algorithm which should be used
 # must be the same for generation and checking
 # allowed values are SBENOINDART(default), SBEINDART, 
-#  SBEINDINVARIANT,  SBENOINDINVARIANT
+#  SBEINDINVARIANT,  SBENOINDINVARIANT, SBENOEDGENOINDINVARIANT,ABENOINDART
 pcc.proofgen.algorithm = SBENOINDINVARIANT
 
 #specifies the file to which proof is written/from which the proof is read from
