Add "clean" target to parser build scripts.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4858 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/src/org/sosy_lab/cpachecker/fshell/fql2/parser/build.xml
+++ b/src/org/sosy_lab/cpachecker/fshell/fql2/parser/build.xml
@@ -23,6 +23,12 @@
         <echo>${basedir}</echo>
     </target>
 
+    <target name="clean" description="Delete generated files">
+        <delete>
+            <fileset dir="${parserDir}" includes="FQLLexer.java FQLParser.java FQLSym.java"/>
+        </delete>
+    </target>
+
     <uptodate property="scanner.uptodate" srcfile="${parserDir}/FQL.lex" targetfile="${parserDir}/FQLLexer.java"/>
 
     <condition property="parser.uptodate">
