added LBE implementation with ART
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/pcc@4872 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/proofCarryingCode-abe.properties
+++ b/config/proofCarryingCode-abe.properties
@@ -16,13 +16,15 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.pr
 # only locations with error label, otherwise it cannot be checked during proof checking
 specification = config/specification/ErrorLabel.spc
 
-# SBE set up
+# ABE set up
+cpa.predicat.blk.alwaysAtLoops = true
+
+# threshold = 1 -> cartesian = true && threshold !=1 -> cartesian = false
 cpa.predicate.abstraction.cartesian = true
 cpa.predicate.blk.threshold = 1
 
 # these settings may be disabled
 #cpa.predicate.blk.alwaysAtFunctions = false
-#cpa.predicat.blk.alwaysAtLoops = false
 
 # CFA configuration
 # only paths to possible error locations are analyzed, may be used
@@ -35,10 +37,8 @@ pcc.proofgen.doPCC = true
 
 # specifies the kind of algorithm which should be used
 # must be the same for generation and checking
-# allowed values are SBENOINDART(default), SBEINDART, 
-# SBEINDINVARIANT,  SBENOINDINVARIANT, SBENOEDGENOINDINVARIANT,
-# SBENOEDGENOINDINVARIANT2,ABENOINDART
-pcc.proofgen.algorithm = SBENOINDINVARIANT
+# allowed values are ABENOINDART
+pcc.proofgen.algorithm = ABENOINDART
 
 #specifies the file to which proof is written/from which the proof is read from
 # default pccProof.txt
