--- a/config/proofCarryingCode-lbe.properties
+++ b/config/proofCarryingCode-lbe.properties
@@ -16,13 +16,11 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.pr
 # only locations with error label, otherwise it cannot be checked during proof checking
 specification = config/specification/ErrorLabel.spc
 
-# SBE set up
-cpa.predicate.abstraction.cartesian = true
-cpa.predicate.blk.threshold = 1
-
-# these settings may be disabled
-#cpa.predicate.blk.alwaysAtFunctions = false
-#cpa.predicat.blk.alwaysAtLoops = false
+# LBE set up
+cpa.predicate.abstraction.cartesian = false
+cpa.predicate.blk.threshold = 0
+cpa.predicate.blk.alwaysAtFunctions = true
+cpa.predicat.blk.alwaysAtLoops = true
 
 # CFA configuration
 # only paths to possible error locations are analyzed, may be used
@@ -35,10 +33,8 @@ pcc.proofgen.doPCC = true
 
 # specifies the kind of algorithm which should be used
 # must be the same for generation and checking
-# allowed values are SBENOINDART(default), SBEINDART, 
-# SBEINDINVARIANT,  SBENOINDINVARIANT, SBENOEDGENOINDINVARIANT,
-# SBENOEDGENOINDINVARIANT2,ABENOINDART
-pcc.proofgen.algorithm = SBENOINDINVARIANT
+# allowed values are ABENOINDART,  LBENOINDART
+pcc.proofgen.algorithm = LBENOINDART
 
 #specifies the file to which proof is written/from which the proof is read from
 # default pccProof.txt
