--- a/.classpath
+++ b/.classpath
@@ -8,19 +8,19 @@
 	<classpathentry exported="true" kind="lib" path="bin/"/>
 	<classpathentry exported="true" kind="lib" path="lib/ivy/runtime/guava.jar" sourcepath="lib/ivy-contrib/guava-sources.jar"/>
 	<classpathentry kind="lib" path="lib/ivy/runtime/jsr305.jar"/>
-        <classpathentry kind="lib" path="lib/javabdd-1.0b2.jar"/>
-	<classpathentry kind="lib" path="lib/java-cup-11a.jar"/>
-	<classpathentry kind="lib" path="lib/yicesapijava.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/runtime/javabdd.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/runtime/java-cup-runtime.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/runtime/jgrapht-jdk1.6.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/runtime/json-simple.jar" sourcepath="lib/ivy-contrib/json-simple-sources.jar"/>
 	<classpathentry kind="lib" path="lib/ivy/runtime/icu4j.jar"/>
-	<classpathentry kind="lib" path="lib/jgrapht-jdk1.6.jar"/>
-	<classpathentry kind="lib" path="lib/eclipse/org.eclipse.cdt.core_5.2.1.201102110609.jar" sourcepath="/Eclipse CDT core"/>
-	<classpathentry kind="lib" path="lib/eclipse/org.eclipse.core.resources_3.6.1.R36x_v20110131-1630.jar"/>
-	<classpathentry kind="lib" path="lib/eclipse/org.eclipse.equinox.common_3.6.0.v20100503.jar"/>
-	<classpathentry kind="lib" path="lib/eclipse/org.eclipse.osgi_3.6.2.R36x_v20110210.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/runtime/org.eclipse.cdt.core.jar" sourcepath="lib/ivy-contrib/org.eclipse.cdt.core-sources.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/runtime/org.eclipse.core.resources.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/runtime/org.eclipse.equinox.common.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/runtime/org.eclipse.osgi.jar"/>
 	<classpathentry kind="lib" path="lib/ivy/test/junit.jar"/>
 	<classpathentry kind="lib" path="lib/ivy/test/hamcrest-core.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/runtime/json-simple.jar" sourcepath="lib/ivy-contrib/json-simple-sources.jar"/>
 	<classpathentry kind="lib" path="lib/eclipse-cdt6-parser.jar"/>
+	<classpathentry kind="lib" path="lib/yicesapijava.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
