Don't define ivy version in two different locations.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/ivy@4878 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.xml
+++ b/build.xml
@@ -35,7 +35,7 @@
     </target>
     <target depends="clean" name="cleanall"/>
 	
-    <property name="ivy.version" value="2.2.0"/> <!-- Change version number here to use a newer version of Ivy for bootstrapping -->
+    <property name="ivy.version" value="2.2.0"/> <!-- Change version number here to use a newer version of Ivy. -->
     <property name="ivy.lib.dir" value="${basedir}/lib/ivy"/>
     <property name="ivy.jar.dir" value="${ivy.lib.dir}/build"/>
     <property name="ivy.jar.file" value="ivy.jar"/>
