--- a/ivy.xml
+++ b/ivy.xml
@@ -19,8 +19,8 @@
         <dependency org="junit" name="junit" rev="4.10" conf="test->default"/>
 
         <!-- Dependency on Ivy itself so that we can ugprade it easily.
-             Don't forget to also change the version in build.xml. -->
-        <dependency org="org.apache.ivy" name="ivy" rev="2.2.0" conf="build->default"/>
+             Change version number in build.xml for upgrading. -->
+        <dependency org="org.apache.ivy" name="ivy" rev="${ivy.version}" conf="build->default"/>
         
         <!-- JFlex Scanner generator -->
         <dependency org="de.jflex" name="jflex" rev="1.4.3" conf="build->default"/>
