Define repository URL only in one place and use it for bootstrapping as well.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/ivy@4879 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.xml
+++ b/build.xml
@@ -36,6 +36,7 @@
     <target depends="clean" name="cleanall"/>
 	
     <property name="ivy.version" value="2.2.0"/> <!-- Change version number here to use a newer version of Ivy. -->
+    <property name="ivy.repo.url" value="http://www.sosy-lab.org/ivy"/>
     <property name="ivy.lib.dir" value="${basedir}/lib/ivy"/>
     <property name="ivy.jar.dir" value="${ivy.lib.dir}/build"/>
     <property name="ivy.jar.file" value="ivy.jar"/>
@@ -46,7 +47,7 @@
     <target name="bootstrap-ivy" unless="ivy.jar.present">
     	<mkdir dir="${ivy.jar.dir}"/>
     	<echo message="Downloading ivy..."/>
-        <get src="http://repo1.maven.org/maven2/org/apache/ivy/ivy/${ivy.version}/ivy-${ivy.version}.jar" dest="${ivy.jar.dir}/${ivy.jar.file}" usetimestamp="true"/>
+	<get src="${ivy.repo.url}/org.apache.ivy/ivy/ivy-${ivy.version}.jar" dest="${ivy.jar.dir}/${ivy.jar.file}" usetimestamp="true"/>
     </target>
 
     <!-- Load the Ivy plugin for Ant so the Ivy tasks are available. -->
