--- a/ivy.xml
+++ b/ivy.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE ivy-module> <!-- generic AcceptAllDTD to make the Eclipse Warning go away -->
-<ivy-module version="2.0">
+<ivy-module version="2.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd">
     <info organisation="org.sosy_lab" module="CPAchecker"/>
         <configurations>
                 <conf name="build" />
