--- a/build.properties
+++ b/build.properties
@@ -3,5 +3,4 @@ bin.includes = META-INF/,\
                .,\
                lib/
 source.. = src/
-bin.excludes = lib/eclipse/,\
-               lib/native/
+bin.excludes = lib/native/
