Change library path from lib/ivy to lib/java
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/ivy@4883 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               lib/
+               lib/,
 source.. = src/
 bin.excludes = lib/native/
