--- a/.classpath
+++ b/.classpath
@@ -6,19 +6,19 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="bin/"/>
-	<classpathentry exported="true" kind="lib" path="lib/ivy/runtime/guava.jar" sourcepath="lib/ivy-contrib/guava-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/runtime/jsr305.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/runtime/javabdd.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/runtime/java-cup-runtime.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/runtime/jgrapht-jdk1.6.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/runtime/json-simple.jar" sourcepath="lib/ivy-contrib/json-simple-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/runtime/icu4j.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/runtime/org.eclipse.cdt.core.jar" sourcepath="lib/ivy-contrib/org.eclipse.cdt.core-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/runtime/org.eclipse.core.resources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/runtime/org.eclipse.equinox.common.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/runtime/org.eclipse.osgi.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/test/junit.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/test/hamcrest-core.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/java/runtime/guava.jar" sourcepath="lib/java-contrib/guava-sources.jar"/>
+	<classpathentry kind="lib" path="lib/java/runtime/jsr305.jar"/>
+	<classpathentry kind="lib" path="lib/java/runtime/javabdd.jar"/>
+	<classpathentry kind="lib" path="lib/java/runtime/java-cup-runtime.jar"/>
+	<classpathentry kind="lib" path="lib/java/runtime/jgrapht-jdk1.6.jar"/>
+	<classpathentry kind="lib" path="lib/java/runtime/json-simple.jar" sourcepath="lib/java-contrib/json-simple-sources.jar"/>
+	<classpathentry kind="lib" path="lib/java/runtime/icu4j.jar"/>
+	<classpathentry kind="lib" path="lib/java/runtime/org.eclipse.cdt.core.jar" sourcepath="lib/java-contrib/org.eclipse.cdt.core-sources.jar"/>
+	<classpathentry kind="lib" path="lib/java/runtime/org.eclipse.core.resources.jar"/>
+	<classpathentry kind="lib" path="lib/java/runtime/org.eclipse.equinox.common.jar"/>
+	<classpathentry kind="lib" path="lib/java/runtime/org.eclipse.osgi.jar"/>
+	<classpathentry kind="lib" path="lib/java/test/junit.jar"/>
+	<classpathentry kind="lib" path="lib/java/test/hamcrest-core.jar"/>
 	<classpathentry kind="lib" path="lib/eclipse-cdt6-parser.jar"/>
 	<classpathentry kind="lib" path="lib/yicesapijava.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
