--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,7 @@
     <property name="target" value="1.6"/>
     <property name="source" value="1.6"/>
     <antversion property="ant.version.exact"/> <!-- Define property that contains the Ant version. -->
-    <property name="ivy.lib.dir" value="${basedir}/lib/ivy"/>
+    <property name="ivy.lib.dir" value="${basedir}/lib/java"/>
 	
     <path id="CPAchecker.classpath">
         <pathelement location="bin"/>
