Manually merge changes make to ant builder configuration in trunk and branch.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/ivy@4888 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/.project
+++ b/.project
@@ -7,7 +7,7 @@
 	<buildSpec>
 		<buildCommand>
 			<name>org.eclipse.ui.externaltools.ExternalToolBuilder</name>
-			<triggers>auto,</triggers>
+			<triggers>auto,full,incremental,</triggers>
 			<arguments>
 				<dictionary>
 					<key>LaunchConfigHandle</key>
