Rename ant task "contrib" to "install-contrib".
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/ivy@4890 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.xml
+++ b/build.xml
@@ -74,10 +74,10 @@
 
     <!-- Update additional resources if they were downloaded previously. -->
     <target name="update-contrib" if="ivy.contrib.present">
-        <antcall target="contrib"/>
+        <antcall target="install-contrib"/>
     </target>
 
-    <target name="contrib" depends="load-ivy" description="retrieve sources and docs for external libraries">
+    <target name="install-contrib" depends="load-ivy" description="retrieve sources and docs for external libraries">
         <ivy:resolve conf="contrib"/>
         <ivy:retrieve sync="true" pattern="${ivy.lib.dir}-contrib/[artifact](-[classifier]).[ext]"/>
     </target>
