added adjustable LBE invariant implementation
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/pcc@4901 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/proofCarryingCode-abe.properties
+++ b/config/proofCarryingCode-abe.properties
@@ -19,6 +19,9 @@ specification = config/specification/ErrorLabel.spc
 # ABE set up
 cpa.predicat.blk.alwaysAtLoops = true
 
+#threshold != 0 && alwaysAtFunctions && ALBENOINDINVARIANT
+# cpa.predicate.cpa.predicate.satCheck = 0
+
 # threshold = 1 -> cartesian = true && threshold !=1 -> cartesian = false
 cpa.predicate.abstraction.cartesian = true
 cpa.predicate.blk.threshold = 1
@@ -37,7 +40,14 @@ pcc.proofgen.doPCC = true
 
 # specifies the kind of algorithm which should be used
 # must be the same for generation and checking
-# allowed values are ABENOINDART
+# allowed values are:
+# if threshold = 1
+#   SBEINDART,   SBENOINDART,  SBEINDINVARIANT,
+#  SBENOINDINVARIANT,  SBENOEDGENOINDINVARIANT,  SBENOEDGENOINDINVARIANT2,
+# if alwaysAtFunction && alwaysAtLoops (LBE... also requires threshold =0)
+#   LBENOINDART,  ALBENOINDART,  LBENOINDINVARIANT, ALBENOINDINVARIANT
+# always
+# ABENOINDART
 pcc.proofgen.algorithm = ABENOINDART
 
 #specifies the file to which proof is written/from which the proof is read from
