--- a/config/proofCarryingCode-lbe.properties
+++ b/config/proofCarryingCode-lbe.properties
@@ -33,7 +33,7 @@ pcc.proofgen.doPCC = true
 
 # specifies the kind of algorithm which should be used
 # must be the same for generation and checking
-# allowed values are ABENOINDART,  LBENOINDART
+# allowed values are ABENOINDART,  LBENOINDART, LBENOINDINVARIANT
 pcc.proofgen.algorithm = LBENOINDART
 
 #specifies the file to which proof is written/from which the proof is read from
