--- a/config/proofCarryingCode-sbe.properties
+++ b/config/proofCarryingCode-sbe.properties
@@ -37,7 +37,8 @@ pcc.proofgen.doPCC = true
 # must be the same for generation and checking
 # allowed values are SBENOINDART(default), SBEINDART, 
 # SBEINDINVARIANT,  SBENOINDINVARIANT, SBENOEDGENOINDINVARIANT,
-# SBENOEDGENOINDINVARIANT2,ABENOINDART
+# SBENOEDGENOINDINVARIANT2,ABENOINDART, ALBENOINDART,  ALBENOINDINVARIANT 
+# (ALBE... require alwaysAtFunctions, alwaysAtLoops)
 pcc.proofgen.algorithm = SBENOINDINVARIANT
 
 #specifies the file to which proof is written/from which the proof is read from
