--- a/config/proofCarryingCode-sbe.properties
+++ b/config/proofCarryingCode-sbe.properties
@@ -38,10 +38,11 @@ pcc.proofgen.doPCC = true
 # allowed values are SBENOINDART(default), SBEINDART, 
 # SBEINDINVARIANT,  SBENOINDINVARIANT, SBENOEDGENOINDINVARIANT,
 # SBENOEDGENOINDINVARIANT2,ABENOINDART, ALBENOINDART,  ALBENOINDINVARIANT 
-# (ALBE... require alwaysAtFunctions, alwaysAtLoops)
-pcc.proofgen.algorithm = SBENOINDINVARIANT
+# (ALBE... require alwaysAtFunctions, alwaysAtLoops, ABE.. requires alwaysAtLoops)
+pcc.proofgen.algorithm = ALBENOINDART
 
 #specifies the file to which proof is written/from which the proof is read from
 # default pccProof.txt
 #pcc.proofgen.file = "pccProof.txt"
 
+#log.consoleLevel = SEVERE
