--- a/config/proofCarryingCode-sbe.properties
+++ b/config/proofCarryingCode-sbe.properties
@@ -39,7 +39,7 @@ pcc.proofgen.doPCC = true
 # SBEINDINVARIANT,  SBENOINDINVARIANT, SBENOEDGENOINDINVARIANT,
 # SBENOEDGENOINDINVARIANT2,ABENOINDART, ALBENOINDART,  ALBENOINDINVARIANT 
 # (ALBE... require alwaysAtFunctions, alwaysAtLoops, ABE.. requires alwaysAtLoops)
-pcc.proofgen.algorithm = ALBENOINDART
+pcc.proofgen.algorithm = SBENOEDGENOINDINVARIANT2
 
 #specifies the file to which proof is written/from which the proof is read from
 # default pccProof.txt
