added config file
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/pcc@4947 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/proofCarryingCode-albe.properties
+++ b/config/proofCarryingCode-albe.properties
@@ -16,11 +16,16 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.pr
 # only locations with error label, otherwise it cannot be checked during proof checking
 specification = config/specification/ErrorLabel.spc
 
-# LBE set up
-cpa.predicate.abstraction.cartesian = false
-cpa.predicate.blk.threshold = 0
-cpa.predicate.blk.alwaysAtFunctions = true
+# ALBE set up
 cpa.predicat.blk.alwaysAtLoops = true
+cpa.predicate.blk.alwaysAtFunctions = false
+
+#threshold != 0 && alwaysAtFunctions && ALBENOINDINVARIANT
+# cpa.predicate.cpa.predicate.satCheck = 0
+
+# threshold = 1 -> cartesian = true && threshold !=1 -> cartesian = false
+cpa.predicate.abstraction.cartesian = true
+cpa.predicate.blk.threshold = 1
 
 # CFA configuration
 # only paths to possible error locations are analyzed, may be used
@@ -33,9 +38,15 @@ pcc.proofgen.doPCC = true
 
 # specifies the kind of algorithm which should be used
 # must be the same for generation and checking
-# allowed values are  LBENOINDART, LBENOINDINVARIANT, ALBENOINDART
-# ALBENOINDINVARIANT, ABENOINDART
-pcc.proofgen.algorithm = LBENOINDART
+# allowed values are:
+# if threshold = 1
+#   SBEINDART,   SBENOINDART,  SBEINDINVARIANT,
+#   SBENOINDINVARIANT,  SBENOEDGENOINDINVARIANT,  SBENOEDGENOINDINVARIANT2,
+# if threshold = 0
+#   LBENOINDART, LBENOINDINVARIANT
+# always 
+#   ALBENOINDART, ALBENOINDINVARIANT, ABENOINDART
+pcc.proofgen.algorithm = ALBENOINDART
 
 #specifies the file to which proof is written/from which the proof is read from
 # default pccProof.txt
