--- a/config/proofCarryingCode-sbe.properties
+++ b/config/proofCarryingCode-sbe.properties
@@ -24,6 +24,9 @@ cpa.predicate.blk.threshold = 1
 #cpa.predicate.blk.alwaysAtFunctions = false
 #cpa.predicat.blk.alwaysAtLoops = false
 
+#this setting may be enabled
+#cpa.predicate.symbolicCoverage = true
+
 # CFA configuration
 # only paths to possible error locations are analyzed, may be used
 # cfa.removeIrrelevantForErrorLocations = true
@@ -39,10 +42,10 @@ pcc.proofgen.doPCC = true
 # SBEINDINVARIANT,  SBENOINDINVARIANT, SBENOEDGENOINDINVARIANT,
 # SBENOEDGENOINDINVARIANT2,ABENOINDART, ALBENOINDART,  ALBENOINDINVARIANT 
 # (ALBE... require alwaysAtFunctions, alwaysAtLoops, ABE.. requires alwaysAtLoops)
-pcc.proofgen.algorithm = SBENOEDGENOINDINVARIANT2
+pcc.proofgen.algorithm = SBENOINDART
 
 #specifies the file to which proof is written/from which the proof is read from
 # default pccProof.txt
 #pcc.proofgen.file = "pccProof.txt"
 
-#log.consoleLevel = SEVERE
+log.consoleLevel = SEVERE
